ombi-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: ombi
  annotations:
    linkerd.io/inject: enabled
