mariadb-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mariadb
  labels:
    app: mariadb
    part-of: ombi
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      part-of: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        part-of: ombi
    spec:
      serviceAccountName: ombi
      containers:
      - name: mariadb
        image: ghcr.io/linuxserver/mariadb:latest
        ports:
        - name: mariadb
          containerPort: 3306
        resources:
          limits:
            memory: 150Mi
          requests:
            memory: 100Mi
        volumeMounts:
        - name: ombi-mariadb
          mountPath: /config
        - name: ombi-secrets
          mountPath: "/mnt/vault"
          readOnly: true
      volumes:
      - name: ombi-mariadb
        persistentVolumeClaim:
          claimName: ombi-mariadb
      - name: ombi-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ombi"
