mariadbexternal-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mariadbexternal
  labels:
    app: mariadbexternal
    part-of: ombi
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadbexternal
      part-of: ombi
  template:
    metadata:
      labels:
        app: mariadbexternal
        part-of: ombi
    spec:
      serviceAccountName: ombi
      containers:
      - name: mariadbexternal
        image: ghcr.io/linuxserver/mariadb:latest
        ports:
        - name: mariadbexternal
          containerPort: 3306
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
        volumeMounts:
        - name: ombi-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        - name: ombi-mariadbexternal
          mountPath: /config
      volumes:
      - name: ombi-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ombi"
      - name: ombi-mariadbexternal
        persistentVolumeClaim:
          claimName: ombi-mariadb
