ombi-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ombi
  labels:
    app: ombi
    part-of: ombi
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
      part-of: ombi
  template:
    metadata:
      labels:
        app: ombi
        part-of: ombi
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      containers:
      - name: ombi
        image: ghcr.io/linuxserver/ombi:latest
        ports:
        - name: ombi
          containerPort: 3579
        volumeMounts:
        - name: ombi
          mountPath: /config
        readinessProbe:
          httpGet:
            path: /api/v1/Status
            port: ombi
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/v1/Status
            port: ombi
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
      volumes:
      - name: ombi
        persistentVolumeClaim:
          claimName: ombi
