mariadbexternal-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadbexternal
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: mariadbexternal
  selector:
    app: mariadbexternal
    part-of: ombi
