ombi-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  type: ClusterIP
  ports:
    - port: 3579
      targetPort: ombi
  selector:
    app: ombi
    part-of: ombi
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
