ombi-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <path:apps-kv/data/ombi/config#HOST>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              number: 3579
  tls:
  - hosts:
    - <path:apps-kv/data/ombi/config#HOST>
